# MintyBot

./: .dockerignore  .gitignore  .requirements.txt.swn  .requirements.txt.swp  Dockerfile  Dockerfile.bak  MintyGPT2.py  README.md  compose.yml  compose.yml.save  main.py  moduletest.py  pyproject.toml  pyproject.toml.save  rankdata.pkl  requirements.txt  requirements.txt.bak  userdata.pkl  userprofile.py  youtubedl.py
MGPT2/: MGPT2_function.py  MGPT2_generation.py  MGPT2_lib.py  MGPT2_question.py  MGPT2_question.py.save
config/: minty_env.py
lib/sqlalchemy_lib/: crud.py  engine.py  init_db.py  model.py
mintyrank/: rank.py  rankprocess.py
src/: MintyBot.py  MintyCurrency.py  MintyCurrency_shop.py  MintyHelp.py  MintyMusic.py  MintyTTS.py  channel_init.py  etcfunction.py
src/MintyCurrency/: MintyCurrency.py
src/lib/: MintyCurrency_lib.py  MintyCurrency_shop_lib.py  MintyMusic_lib.py
