[project]
name = "testbot-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "discord>=2.3.2",
    "asyncio>=4.0.0",
    "ffmpeg>=1.4",
    "gtts>=2.5.4",
    "keras>=3.10.0",
    "yt-dlp>=2025.10.14",
    "transformers==4.12.0",
    "huggingface-hub==0.26.2",
    "pyglet>=2.1.10",
    "pynacl>=1.6.0",
]
