[project]
name = "testbot-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "discord>=2.3.2",
    "asyncio>=4.0.0",
    "ffmpeg>=1.4",
    "gtts>=2.5.4",
    "keras",
    "yt-dlp",
    "transformers",
    "huggingface-hub",
    "pyglet>=2.1.11",
    "pynacl>=1.6.1",
    "tokenizers>=0.22.1",
    "uvicorn>=0.38.0",
    "accelerate>=0.26.0",
    "fastapi[standard]>=0.124.2",
    "mariadb==1.1.14",
    "python-dotenv",
    "sqlalchemy>=2.0.45",
]
